# waypoints

./: .gitignore  ARCHITECTURE.md  FINDINGS.md  README.md  wrangler.jsonc
.github/workflows/: release.yml
docs/: RELEASING.md
proton-sdk/: VENDORED.md
proton-sdk/client/: README.md
proton-sdk/client/cs/: CHANGELOG.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props
proton-sdk/client/js/: .eslintrc.js  CHANGELOG.md  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
proton-sdk/incubating/: README.md
proton-sdk/incubating/account/: README.md
proton-sdk/incubating/client/: README.md
proton-sdk/patches/: 0001-webcrypto-fork-login.patch
web/: .env.example  FIREFOX-VIDEO-STALL.md  env.d.ts  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts  wrangler.toml
web/public/: _headers
web/scripts/: typecheck.mjs
web/src/: App.vue  main.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: lib.rs  main.rs
web/src/app/: App.vue  main.ts  router.ts
web/src/assets/: styles.css
web/src/components/: AlbumCard.vue  LandingPage.vue  Lightbox.vue  LoadingRoute.vue  LoginGate.vue  Logo.vue  PhotoFeed.vue  RouteMap.vue  Thumb.vue
web/src/composables/: useAlbumManifest.ts  useAlbums.ts  useFullscreen.ts  useMotion.ts  useProton.ts  useTheme.ts  useThumbnails.ts
web/src/i18n/: index.ts
web/src/lib/: buildManifest.ts  geocode.ts  host.ts  logo.ts  mapStyle.ts  nativeLocale.ts  platform.ts  slug.ts  (+6 more)
(+1001 files in other folders)
