[package]
name = "Waypoints"
version = "0.1.1"
description = "A private, browser-only view of Proton Photos albums as map timelines"
authors = ["Patrick Stillhart"]
repository = "https://github.com/arcs-/waypoints"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "waypoints_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
# macOS Keychain storage for the Proton session (see keychain_* commands in lib.rs)
keyring = { version = "3", features = ["apple-native"] }
